# CSGY9223_OSPSD

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.circleci/: config.yml
src/opensource/: app.py
tests/: test_app.py  test_math.py
